--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,23 +1,28 @@
-/* write your override styles here */
-
 #wall .tag-1 {
   display: none;
 }
 
-#wall #tag-2 {
+#wall .tag-1 + #tag-2 {
   display: none;
 }
 
-#wall #tag-3 {
+div#wall #tag-3.slick.wicked{
   display: none;
 }
 
-div #tag-4 {
+
+#wall .parent #tag-4 {
   display: none;
 }
 
-div #tag-5 {
+div#wall .parent + .parent #tag-5.slick {
   display: none;
 }
 
-.parent #tag-6
+div#wall div.parent div + div:last-child div#tag-6 {
+  display: none;
+}
+
+body div#wall div.parent div:first-child > #tag-7.slick {
+  display: none;
+}ß
